--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NDK</title>
     <link rel="stylesheet" href="css/estilo.css">
+    <!-- CSS only -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
 </head>
-<body>
+<body class="contenedor">
   <header>
     <div class="logo">
         <img src="img/NDK-removebg-preview.png" alt="imagen de logo">
@@ -19,7 +21,45 @@
     </nav>
     
   </header>
- <h1></h1>
+  <div class="divUno">
+ <h1>Encontra tu trabajo ideal, facil y rapido. </h1>
+ <h2>
+  Tu nuevo trabajo te espera</h2>
+  <nav class="imagen">
+ <img src="img/SUPERAR-BUSQUEDA-EMPLEO.png" alt="imagen grande">
+  </nav>
+</div>
 
+<div class="divDos"> <p class="parrafo">
+  Somos una joven empresa agíl,con personalidad y marcando nuestro propio estilo.Nuestra forma de funcionar es la cosecuencia directa de lo que nos gusta de nuestro trabajo
+</p>
+
+</div>
+
+<div class="divDos"> <h2>buscá tu trabajo ideal</h2>
+  <form>
+    <label for="Nombre">Nombre</label>
+    <input type="text">
+    <label for="Apellido">Apellido</label>
+    <input type="text">
+    <label for="E-mail">E-mail</label>
+    <input type="text">
+    <label for="Telefono">Telefono</label>
+    <input type="text">
+    
+   
+</div>
+
+<div class="divTres"> 
+  <img src="img/NDK-removebg-preview.png" alt="logo de la empresa">
+
+
+</div>
+ <footer class="footer" > &copy;&reg; 2022 NDK todos los derechos reservados
+
+
+ </footer>
+<!-- JavaScript Bundle with Popper -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 </body>
 </html>
